# recipe-chatbot

./: .env.example  .gitignore  README.md  TESTING.md  pyproject.toml  requirements.txt
app/: __init__.py  behavior.py  chat.py  config.py  main.py  schemas.py  tracing.py
config/: agent_behavior.md
data/: .gitkeep
templates/: chat.html
